Fixed a bug with adding a product without image on the VPS.